# CPP_Project_Template

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake.sh  main  make.sh  test.sh
src/: CMakeLists.txt  configuration.h  main.cc  main.cpp
test/: CMakeLists.txt  test-runner.cpp
